--- a/styles/style.css
+++ b/styles/style.css
@@ -1550,10 +1550,26 @@ h1 {
   margin-bottom: 10em;
 }
 
+@media screen and (max-width: 361px) {
+  .about {
+    padding: 0 1rem;
+    width: 100vw;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+  }
+}
+
 .about h1 {
   font-size: 2.25rem;
   margin: 0 auto;
   width: 30vw;
+}
+
+@media screen and (max-width: 361px) {
+  .about h1 {
+    width: 100%;
+    font-size: 2rem;
+  }
 }
 
 .about h1 span {
@@ -1569,6 +1585,12 @@ h1 {
   margin-top: 10em;
 }
 
+@media screen and (max-width: 361px) {
+  .about .social {
+    width: 60vw;
+  }
+}
+
 .my_pic {
   width: 60vw;
   height: 660px;
@@ -1576,12 +1598,23 @@ h1 {
   margin-top: 10em;
   background: #F2F2F2;
   position: relative;
+  border-radius: 5px;
+}
+
+@media screen and (max-width: 361px) {
+  .my_pic {
+    height: 60vh;
+    width: 100%;
+    margin-bottom: 15rem;
+  }
 }
 
 .my_pic img {
   width: 100%;
   height: 100%;
   display: block;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .my_pic figcaption {
@@ -1600,10 +1633,26 @@ h1 {
           box-shadow: 0px 15px 15px 0 rgba(0, 0, 0, 0.25);
 }
 
+@media screen and (max-width: 361px) {
+  .my_pic figcaption {
+    right: -2rem;
+    top: calc(50% + 150px);
+    width: 250px;
+    height: auto;
+    padding: .2em;
+  }
+}
+
 .citation {
   font-family: "Moderat Regular";
   font-weight: 400;
   font-size: 2rem;
+}
+
+@media screen and (max-width: 361px) {
+  .citation {
+    font-size: 1.5rem;
+  }
 }
 
 .citation p {
@@ -1633,11 +1682,30 @@ h1 {
   border-bottom: 3px solid #000;
 }
 
+@media screen and (max-width: 361px) {
+  .about + .description {
+    display: block;
+    width: 100%;
+    padding: 0 1rem;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+  }
+  .about + .description p {
+    font-size: 1.25rem;
+  }
+}
+
 /*-----VALEURS-----*/
 .valeurs {
   margin-top: 10em;
   background-color: #DC7855;
   padding: 5em 0;
+}
+
+@media screen and (max-width: 361px) {
+  .valeurs {
+    padding: 5em 1rem;
+  }
 }
 
 .valeurs h2 {
@@ -1653,6 +1721,19 @@ h1 {
   height: 250px;
 }
 
+@media screen and (max-width: 361px) {
+  .valeurs .service {
+    padding: 1rem;
+    height: auto;
+  }
+  .valeurs .service h3 {
+    margin-top: 4rem;
+  }
+  .valeurs .service p {
+    display: block;
+  }
+}
+
 .passion_value h3 {
   position: relative;
 }
@@ -1661,6 +1742,13 @@ h1 {
   content: url(/img/emoji/passion.png);
   position: absolute;
   left: -2em;
+}
+
+@media screen and (max-width: 361px) {
+  .passion_value h3::before {
+    top: -3rem;
+    left: calc(50% - 20px);
+  }
 }
 
 .originality_value h3 {
@@ -1673,6 +1761,13 @@ h1 {
   left: -2em;
 }
 
+@media screen and (max-width: 361px) {
+  .originality_value h3::before {
+    top: -3rem;
+    left: calc(50% - 20px);
+  }
+}
+
 .humble_value h3 {
   position: relative;
 }
@@ -1683,6 +1778,13 @@ h1 {
   left: -2em;
 }
 
+@media screen and (max-width: 361px) {
+  .humble_value h3::before {
+    top: -3rem;
+    left: calc(50% - 20px);
+  }
+}
+
 .team_value h3 {
   position: relative;
 }
@@ -1691,6 +1793,13 @@ h1 {
   content: url(/img/emoji/team.png);
   position: absolute;
   left: -2em;
+}
+
+@media screen and (max-width: 361px) {
+  .team_value h3::before {
+    top: -3rem;
+    left: calc(50% - 20px);
+  }
 }
 
 /*-----SIGNATURES-----*/
@@ -1710,12 +1819,30 @@ h1 {
   margin-bottom: 5rem;
 }
 
+@media screen and (max-width: 361px) {
+  .design h2 {
+    text-align: left;
+    width: 100%;
+    padding: 0 1rem;
+  }
+}
+
 .design p {
   font-family: "Moderat Regular";
   font-weight: 400;
   font-size: 1.5rem;
   width: 35vw;
   margin: 0 auto;
+  line-height: 140%;
+}
+
+@media screen and (max-width: 361px) {
+  .design p {
+    width: 100%;
+    padding: 0 1rem;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+  }
 }
 
 .design .typeform_link {
@@ -1803,6 +1930,12 @@ h1 {
   left: 10rem;
 }
 
+@media screen and (max-width: 361px) {
+  .selection_travaux {
+    display: none;
+  }
+}
+
 /*-----FORMATION-----*/
 .formation {
   background-color: #DC7855;
@@ -1830,6 +1963,17 @@ h1 {
   width: 25%;
 }
 
+@media screen and (max-width: 361px) {
+  .formation_title {
+    width: 100%;
+    padding: 0 1rem;
+    position: static;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    margin-bottom: 3rem;
+  }
+}
+
 .formation_title p {
   line-height: 1.725rem;
 }
@@ -1843,7 +1987,15 @@ h1 {
   -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
   grid-auto-flow: row;
-  grid-gap: 30px;
+  gap: 30px;
+}
+
+@media screen and (max-width: 361px) {
+  .formations {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    padding: 0 1rem;
+  }
 }
 
 .school {
@@ -1870,10 +2022,23 @@ h1 {
           justify-content: flex-start;
 }
 
+@media screen and (max-width: 361px) {
+  .school {
+    height: 300px;
+  }
+}
+
 .school h3 {
   margin: 0;
   margin-top: 1rem;
   font-size: 1.5rem;
+}
+
+@media screen and (max-width: 361px) {
+  .school h3 {
+    margin-bottom: .5rem;
+    font-size: 1.3rem;
+  }
 }
 
 .school p {
@@ -1931,6 +2096,13 @@ h1 {
       grid-column-start: 2;
 }
 
+@media screen and (max-width: 361px) {
+  .technobel {
+    -ms-grid-column: unset;
+        grid-column-start: unset;
+  }
+}
+
 .technobel .form_emojis {
   width: 120px;
   background-image: url(/img/emoji/ok.png), url(/img/emoji/tools.png), url(/img/emoji/yeah.png);
@@ -1978,6 +2150,15 @@ h1 {
   margin-top: 15em;
 }
 
+@media screen and (max-width: 361px) {
+  .cta {
+    width: 100%;
+    padding: 0 1rem;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+  }
+}
+
 .cta h2 {
   text-align: center;
   margin: 0 auto;
@@ -2002,6 +2183,15 @@ h1 {
   margin-top: 5rem;
 }
 
+@media screen and (max-width: 361px) {
+  .projects {
+    padding: 0 1rem;
+    width: 100vw;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+  }
+}
+
 .projects h1 {
   margin: 0;
   font-size: 4.5rem;
@@ -2019,12 +2209,26 @@ h1 {
   display: grid;
   -ms-grid-columns: (1fr)[4];
       grid-template-columns: repeat(4, 1fr);
-  grid-gap: 30px;
+  gap: 30px;
   grid-auto-flow: row;
+}
+
+@media screen and (max-width: 361px) {
+  .my_works {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    gap: 5rem;
+  }
 }
 
 .projet {
   height: 60vh;
+}
+
+@media screen and (max-width: 361px) {
+  .projet {
+    border-bottom: 0.3rem dotted #DC7855;
+  }
 }
 
 .projet a {
@@ -2112,6 +2316,14 @@ h1 {
 
 .illu_projet .thumbnail {
   background-image: url(/img/content/vector_2.png);
+}
+
+.transmedia_projet {
+  padding-bottom: 5rem;
+}
+
+.illu_projet {
+  border-bottom: none;
 }
 
 .playzone, .transmedia, .signature, .illu_web {
