--- a/styles/scss/_showcase.scss
+++ b/styles/scss/_showcase.scss
@@ -1,6 +1,13 @@
 .playzone, .transmedia, .signature, .illu_web{
     margin-top: 10rem;
 
+    @include mobile{
+        padding: 0 1rem;
+        width: 100vw;
+        box-sizing: border-box;
+        margin-top: 3rem;
+    }
+
     h1{
         text-align: center;
         margin: 0;
@@ -10,6 +17,11 @@
         flex-direction: column;
         justify-content: center;
         margin-top: 10rem;
+
+        @include mobile{
+            font-size: 3.5rem;
+            margin-top: 5rem;
+        }
         span{
             @include ModeratBold;
             order: -1;
@@ -26,6 +38,10 @@
         height: 50px;
         position: relative;
         top: .2em;
+
+        @include mobile{
+            display: none;
+        }
     }
 }
 
@@ -33,6 +49,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @include mobile{
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        align-items: flex-start;
+    }
 
     a{
         color: $black;
@@ -42,6 +65,11 @@
         display: flex;
         flex-direction: column;
         width: 350px;
+
+        @include mobile{
+            width: 100%;
+            font-size: 1rem;
+        }
 
         &:hover span{
             color: $accent;
@@ -69,6 +97,11 @@
                 height: 15px;
                 display: inline-block;
                 margin-right: 1rem;
+
+                @include mobile{
+                    width: 20px;
+                    margin-right: .5rem;
+                }
             }
         }
 
@@ -77,6 +110,10 @@
             display: block;
             margin-top: .5rem;
             order: 1;
+
+            @include mobile{
+                font-size: .825rem;
+            }
         }
     }
     a:last-of-type{
@@ -100,6 +137,10 @@
                 height: 15px;
                 display: inline-block;
                 margin-left: 1rem;
+                @include mobile{
+                    width: 20px;
+                    margin-left: .5rem;
+                }
             }
         }
 
@@ -117,6 +158,13 @@
     text-align: center;
     font-size: 2.25rem;
     margin: 0;
+
+    @include mobile{
+        order: 1;
+        grid-column-start: span 2;
+        margin-top: 2rem;
+        font-size: 1.75rem;
+    }
     span{
         display: block;
         @include ModeratRegular;
@@ -132,6 +180,10 @@
     justify-content: space-between;
     margin-top: 10rem;
     @include ModeratRegular;
+
+    @include mobile{
+        margin-top: 5rem;
+    }
 
     h4{
         font-size: 1.5rem;
@@ -153,10 +205,18 @@
     list-style: none;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+
+    @include mobile{
+        grid-template-columns: 1fr;
+        grid-auto-flow: row;
+        gap: 30px;
+        margin-bottom: 2rem;
+    }
 }
 
 .overview_end{
     @extend .overview_top;
+    margin-bottom: 0;
 }
 
 .overview_title{
@@ -164,6 +224,12 @@
     @include ModeratRegular;
     width: 50%;
     margin: 2em 0;
+    
+    @include mobile{
+        width: 100%;
+        font-size: 2.5rem;
+        order: -1;
+    }
 
     strong{
         color: $black;
@@ -171,6 +237,10 @@
         font-size: 1.5rem;
         display: block;
         margin: 0;
+
+        @include mobile{
+            margin-bottom: .5rem;
+        }
     }
 }
 
@@ -190,10 +260,18 @@
 
     section{
         margin-bottom: 10rem;
+
+        @include mobile{
+            margin-bottom: 8rem;
+        }
     }
 
     .idee{
         margin-bottom: 35rem;
+        
+        @include mobile{
+            margin-bottom: 8rem;
+        }
     }
 
     h3{
@@ -204,6 +282,10 @@
 
     p{
         line-height: 2.5rem;
+
+        @include mobile{
+            line-height: 140%;
+        }
     }
     
     em{
@@ -234,6 +316,10 @@
         position: absolute;
         top: 160vh;
         right: 0;
+
+        @include mobile{
+            display: none;
+        }
     }
 }
 
@@ -257,6 +343,10 @@
         z-index: -1;
         top: 50%;
         left: -30vw;
+
+        @include mobile{
+            display: none;
+        }
     }
 }
 
@@ -265,6 +355,12 @@
     justify-content: space-between;
     margin: 0 -10rem;
     margin-top: 5rem;
+
+    @include mobile{
+        margin: 0;
+        flex-direction: column;
+        margin-top: 3rem;
+    }
 }
 
 .users_types{
@@ -275,14 +371,31 @@
 
 .users{
     width: 60%;
+
+    @include mobile{
+        width: 100%;
+        margin-bottom: 2rem;
+    }
     h4{
         font-size: 2.25rem;
         margin: 0;
         margin-bottom: 1rem;
 
+        @include mobile{
+            font-size: 1.825rem;
+        }
+
         span{
             display: block;
             font-size: 1.5rem;
+        }
+    }
+
+    &:first-of-type{
+        @include mobile{
+            span{
+                display: none;
+            }
         }
     }
 }
@@ -292,6 +405,10 @@
     padding: 0;
     list-style: none;
 
+    @include mobile{
+        margin: 0;
+    }
+
     li{
         background-color: $accent;
         display: flex;
@@ -299,21 +416,50 @@
         padding: 3rem 0;
         margin: 3rem auto;
 
+        @include mobile{
+            flex-direction: column;
+            align-items: center;
+        }
+
         h4, p{
             margin: 0;
             line-height: 30px;
             font-size: 1.5rem;
+
+            @include mobile{
+                text-align: center;
+
+                padding: 0 1rem;
+            }
         }
 
         h4{
             margin-right: .5rem;
+
+            @include mobile{
+                margin-right: 0;
+                margin-bottom: 2rem;
+                display: flex;
+                flex-direction: column;
+            }
             &::before{
                 content: url(/img/icons/notification.svg);
                 margin: 0 3rem;
+
+                @include mobile{
+                    margin: 0;
+                    margin-bottom: 1rem;
+                }
+                
             }
             &::after{
                 content: "-";
                 margin-left: .5rem;
+
+                @include mobile{
+                    content: "";
+                    margin: 0;
+                }
             }
         }
     }
@@ -325,6 +471,13 @@
     }
 }
 
+.user_journey img{
+    @include mobile{
+        margin: 0 -1rem;
+        max-width: 100vw;
+    }
+}
+
 .parcours{
     margin: 0 -20rem;
     margin-bottom: 5rem;
@@ -332,10 +485,19 @@
     list-style: none;
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    grid-gap: 5rem;
+    gap: 5rem;
     text-align: center;
     line-height: 2rem;
     position: relative;
+
+    @include mobile{
+        margin: 0;
+        margin-bottom: 5rem;
+        grid-template-columns: 1fr;
+        grid-auto-flow: row;
+        width: 100%;
+        gap: 1rem;
+    }
 
     &:before{
         content: "";
@@ -347,6 +509,18 @@
         margin: 0 -20em;
         top: 100px;
         left: 0;
+
+        @include mobile{
+            display: none;
+        }
+    }
+}
+
+.step{
+    @include mobile{
+        background-color: $accent;
+        border-radius: 5px;
+        padding: 2rem;
     }
 }
 
@@ -354,6 +528,13 @@
     font-size: 2.25rem;
     @include ModeratRegular;
     position: relative;
+
+    @include mobile{
+        font-size: 2rem;
+        margin: 0;
+        margin-bottom: 2rem;
+        @include ModeratBold;
+    }
 
     &:after{
         content: "";
@@ -366,6 +547,10 @@
         top: 47px;
         left: 50%;
         transform: translateX(-7px);
+
+        @include mobile{
+            display: none;
+        }
     }
 }
 
@@ -382,15 +567,33 @@
 /*-----UI CASE STUDY-----*/
 
 .ui_case_study{
+
+    @include mobile{
+        width: 100vw;
+        padding: 0 1rem;
+        box-sizing: border-box;
+    }
+
     h2{
         @include ModeratRegular;
         font-size: 6rem;
         text-align: center;
         margin-bottom: 15rem;
 
+        @include mobile{
+            font-size: 3.5rem;
+            width: 100%;
+            margin-bottom: 10rem;
+        }
+
         span{
             display: block;
             font-size: 2.25rem;
+
+            @include mobile{
+                font-size: 1.75rem;
+                margin-top: .5rem;
+            }
         }
     }
 }
@@ -400,7 +603,19 @@
     margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 30px;
+    gap: 30px;
+
+    @include mobile{
+        grid-template-columns: 1fr;
+        grid-auto-flow: row;
+        width: 100%;
+    }
+}
+
+.pratique{
+    @include mobile{
+        width: 328px;
+    }
 }
 
 .processus{
@@ -408,6 +623,10 @@
     padding: 0;
     list-style: none;
     counter-reset: my-counter;
+
+    @include mobile{
+        width: 100%;
+    }
 
     li{
         background-color: $white;
@@ -426,6 +645,10 @@
             font-size: 2.25rem;
             margin: 3rem;
             @include ModeratBold;
+
+            @include mobile{
+                margin: 2rem;
+            }
         }
 
         &:hover{
@@ -436,6 +659,10 @@
         &::after{
             content: url(/img/icons/figma.svg);
             margin-right: 3rem;
+
+            @include mobile{
+                margin-right: 2rem;
+            }
         }
     }
 }
@@ -444,19 +671,48 @@
     display: grid;
     grid-template-rows: repeat(3, 1fr);
     grid-auto-flow: row;
-    grid-gap: 5rem;
+    gap: 5rem;
     margin: 0 auto;
     width: 40vw;
+
+    @include mobile{
+        width: 100vw;
+        margin: 0 -1rem;
+        gap: 3rem;
+    }
 
     img{
         box-shadow: $shadow;
         border-radius: 5px;
+
+        @include mobile{
+            box-shadow: none;
+            border-radius: 0;
+        }
+    }
+}
+
+.design_system{
+
+    @include mobile{
+
+        h2{
+            margin-bottom: 5rem;
+        }
+
+        img{
+            display: none;
+        }
     }
 }
 
 .color_title{
     text-align: center;
     padding-top: 5rem; //c'est dégueulasse mais ça fonctionne alors yolo
+
+    @include mobile{
+        display: none;
+    }
 }
 
 .couleurs{
@@ -466,7 +722,14 @@
     margin-bottom: 15rem;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-gap: 30px;
+    gap: 30px;
+
+    @include mobile{
+        width: 100%;
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: 10rem;
+        margin: 15rem 0 5rem 0;
+    }
 }
 
 .color{
@@ -518,12 +781,23 @@
 /*-----PLAYTOGNE RESULT-----*/
 
 .result{
+
+    @include mobile{
+        width: 100vw;
+        padding: 0 1rem;
+        box-sizing: border-box;
+    }
+
     h2{
         @include ModeratRegular;
         font-size: 6rem;
         text-align: center;
         margin: 0;
         margin-bottom: 5rem;
+
+        @include mobile{
+            font-size: 5rem;
+        }
     }
     p{
         margin: 0 auto;
@@ -532,11 +806,19 @@
         font-size: 1.5rem;
         line-height: 2.5rem;
         width: 40vw;
+
+        @include mobile{
+            width: 100%;
+        }
     }
     iframe{
         margin: 0 auto;
         display: block;
         margin-top: 5rem;
+
+        @include mobile{
+            display: none;
+        }
     }
 }
 
@@ -548,6 +830,11 @@
 
 .showcase{
     margin: 0 -10rem;
+
+    @include mobile{
+        margin: 0;
+        width: 100%;
+    }
 }
 
 .illustration{
@@ -567,6 +854,10 @@
     border-radius: 5px;
     width: 20vw;
     padding: 5rem 3rem;
+
+    @include mobile{
+        width: 60%; //bon c'est dégueu mais ça fonctionne alors yolo
+    }
 
     h4{
         font-size: 2.25rem;
@@ -610,15 +901,26 @@
     position: relative;
 }
 
+
 /*-----TRANSMEDIA CASE STUDY-----*/
 
 .synopsis, .intention, .audience, .amal_en_pratique{
     @include case_center;
 }
 
+.audience{
+    @include mobile{
+        margin: 0 -1rem;
+    }
+}
+
 .amal_schemas{
     width: 80vw;
     margin: 0 auto;
+
+    @include mobile{
+        width: 100%;
+    }
 
     img{
         width: 100%;
@@ -626,6 +928,12 @@
         border-radius: 10px;
         box-shadow: $shadow;
         transition: all .5s;
+
+        @include mobile{
+            margin-bottom: 2rem;
+            border-radius: 0;
+            box-shadow: none;
+        }
 
         &:hover{
             transform: scale(1.01);
@@ -639,13 +947,26 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-flow: row;
-    grid-gap: 30px;
+    gap: 30px;
+
+    @include mobile{
+        width: 100vw;
+        padding: 0 1rem;
+        gap: 1rem;
+        box-sizing: border-box;
+        grid-template-columns: repeat(2, 1fr);
+    }
 
     img{
         width: 100%;
         border-radius: 5px;
         box-shadow: $shadow;
         transition: all .5s;
+
+        @include mobile{
+            border-radius: 0;
+            box-shadow: none;
+        }
 
         &:hover{
             transform: scale(1.1);
@@ -655,4 +976,16 @@
 
 .transmedia_case_study .users{
     width: 40%;
+
+    @include mobile{
+        width: 100%;
+    }
+}
+
+.transmedia_case_study .audience{
+    @include mobile{
+        padding: 0 1rem;
+        box-sizing: border-box;
+        margin: 0;
+    }
 }
