--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -34,6 +34,13 @@
     width: 40vw;
     margin: 0 auto;
     margin-top: 10rem;
+
+    @include mobile{
+        width: 100%;
+        margin-top: 5rem;
+        padding: 0 1rem;
+        box-sizing: border-box;
+    }
 }
 
 /*Couleurs*/
